infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: finflow
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
