infra/k8s/fraud-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-service
  namespace: finflow
  labels:
    app: fraud-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud-service
  template:
    metadata:
      labels:
        app: fraud-service
        version: v1
    spec:
      terminationGracePeriodSeconds: 40
      containers:
        - name: fraud-service
          image: finflow/fraud-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
              name: http
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
            limits:
              memory: 512Mi
              cpu: 1000m
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: finflow
spec:
  selector:
    app: fraud-service
  ports:
    - port: 8084
      targetPort: 8084
      name: http
