infra/k8s/payment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: finflow
  labels:
    app: payment-service
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
        version: v1
    spec:
      terminationGracePeriodSeconds: 40
      containers:
        - name: payment-service
          image: finflow/payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
              name: http
          resources:
            requests:
              memory: 384Mi
              cpu: 200m
            limits:
              memory: 768Mi
              cpu: 1000m
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 25
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 35
            periodSeconds: 15
            failureThreshold: 4
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: finflow
spec:
  selector:
    app: payment-service
  ports:
    - port: 8082
      targetPort: 8082
      name: http
