infra/k8s/wallet-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
  namespace: finflow
  labels:
    app: wallet-service
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wallet-service
  template:
    metadata:
      labels:
        app: wallet-service
        version: v1
    spec:
      terminationGracePeriodSeconds: 40
      containers:
        - name: wallet-service
          image: finflow/wallet-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              name: http
          resources:
            requests:
              memory: 256Mi
              cpu: 150m
            limits:
              memory: 512Mi
              cpu: 800m
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: wallet-service
  namespace: finflow
spec:
  selector:
    app: wallet-service
  ports:
    - port: 8083
      targetPort: 8083
      name: http
